# metal-SingleCell

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CODE_AVAILABILITY.md  LICENSE  README.md  RESOURCES.md  SKILLS.md  SPATIAL_KNN_investigation.md  pyproject.toml
.claude/skills/environments/: SKILL.md
.claude/skills/graph-clustering/: SKILL.md
.claude/skills/metal-shading-language/: SKILL.md
.claude/skills/project/: SKILL.md
.claude/skills/rapids-api/: SKILL.md
.claude/skills/sparse-kernels/: SKILL.md
.github/workflows/: ci.yml  gpu-parity.yml  release.yml
docs/: conf.py  index.md  installation.md  requirements.txt  tutorials.md
docs/api/: index.md
envs/: metalsinglecell.yml  metasinglecell.yml
experimental/: README.md  louvain_hybrid.py
notebooks/: 01_basic_workflow.ipynb  02_pearson_residuals.ipynb  04_squidpy.ipynb  _build_tutorials.py  brain_1M.ipynb
results/validation/: RESULTS_allfuncs.md  RESULTS_clustering_workarounds.md  RESULTS_realdata.md  RESULTS_step2_optimization.md  RESULTS_v_benchmark.md  RESULTS_v_pipeline.md  RESULTS_v_realatlas.md  RESULTS_v_realspatial.md  RESULTS_v_realxenium.md  RESULTS_v_remaining.md  RESULTS_v_remaining_scale.md  benchmark.csv  v_allfuncs.csv  v_pipeline.csv
src/metalsinglecell/: __init__.py  backed.py  config.py  decomposition.py  embedding.py  gr.py  integration.py  pp.py  preprocess.py  reference.py  validation.py
src/metalsinglecell/_vendor/mlx_vis/: NOTICE  __init__.py  knn.py  tsne.py  umap.py
src/metalsinglecell/graph/: __init__.py  _prof.py  csr_graph.py  leiden.py
src/metasinglecell/: __init__.py  backed.py  cluster.py  config.py  decomposition.py  embedding.py  integration.py  neighbors.py  pp.py  preprocess.py  sparse.py  spatial.py  tl.py  tools.py  validation.py
src/metasinglecell/_vendor/: __init__.py
src/metasinglecell/_vendor/mlx_vis/: NOTICE  tsne.py
src/metasinglecell/graph/: leiden.py  louvain.py  louvain_fused_raw.py  primitives.py
tests/: conftest.py  test_backed_streaming.py  test_config.py  test_gpu_parity.py  test_harmonize.py  test_import_contract.py  test_postfix_fixes.py  test_validation.py
validation_notebooks/: 00_cpu_reference_oracle.py  01_qc_metrics_parity.py  02_normalize_log1p_parity.py  03_hvg_parity.py  04_scale_parity.py  05_pca_parity.py  06_neighbors_parity.py  07_benchmark.py  08_leiden_umap_parity.py  09_graph_primitives_parity.py  10_louvain_parity.py  11_leiden_gpu_parity.py  v_allfuncs.py  v_benchmark.py  v_benchmark_spatial.py  v_outofcore_prep.py  v_pipeline.py  v_realatlas.py  v_realdata.py  v_realspatial.py  v_realxenium.py  v_remaining.py  v_remaining_scale.py
